Fix background color and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ html {
 
   font-family: "Open Sans", sans-serif;
   line-height: 1.5;
-  background-color: #e2e2e2;
+  background-color: #ccc;
 }
 
 *, *::before, *::after {
@@ -47,7 +47,8 @@ ul li {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin: 1.5rem;
+  margin: 0 1.5rem;
+  padding-top: 2rem;
 }
 
 h3 {
